kubernetes/apps/network/envoy-gateway/config/envoy.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
sops:
  age:
    - recipient: age1086gtxn8l9dh0t2y0nu5ye0hczjyjc7q5tengjcf8lkynlta653sapg96f
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkYitCZWhvYmppV2UreUx0
[...]
        nzwiGQHxcROREf9lvCl1OAifIpmDaVSGds95yPT4exnXPV7nSn6OMA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-09-02T11:16:05Z"
  mac: ENC[AES256_GCM,data:qVS1pU6Gk6Kci1JMEgObmEAHw/jOl9/ay753rNncy41E6UQWxnQ/hJ6z+qzLJMBnOo5d8ItY3Zh8+C0HFpXurmKpl+bmRfi3cI4I6w04/qhtt5S5B6AGukWo58wCZZ3OTiA/hC4jKhPTTzUjyNNtEE6uV+/N4r4inLUzhIHWVO0=,iv:MS/W+HbTZdptfLAGzfw5Zl2GburNnDx2vHV4YeVC1ng=,tag:YMsf51ld2O+FOtDu1d1KcQ==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.gitlab.be
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: external.gitlab.be
      lbipam.cilium.io/ips: 192.168.1.23
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: gitlab-be-production-tls
sops:
  age:
    - recipient: age1086gtxn8l9dh0t2y0nu5ye0hczjyjc7q5tengjcf8lkynlta653sapg96f
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkYitCZWhvYmppV2UreUx0
[...]
        nzwiGQHxcROREf9lvCl1OAifIpmDaVSGds95yPT4exnXPV7nSn6OMA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-09-02T11:16:05Z"
  mac: ENC[AES256_GCM,data:qVS1pU6Gk6Kci1JMEgObmEAHw/jOl9/ay753rNncy41E6UQWxnQ/hJ6z+qzLJMBnOo5d8ItY3Zh8+C0HFpXurmKpl+bmRfi3cI4I6w04/qhtt5S5B6AGukWo58wCZZ3OTiA/hC4jKhPTTzUjyNNtEE6uV+/N4r4inLUzhIHWVO0=,iv:MS/W+HbTZdptfLAGzfw5Zl2GburNnDx2vHV4YeVC1ng=,tag:YMsf51ld2O+FOtDu1d1KcQ==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: internal.gitlab.be
      lbipam.cilium.io/ips: 192.168.1.24
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: gitlab-be-production-tls
sops:
  age:
    - recipient: age1086gtxn8l9dh0t2y0nu5ye0hczjyjc7q5tengjcf8lkynlta653sapg96f
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkYitCZWhvYmppV2UreUx0
[...]
        nzwiGQHxcROREf9lvCl1OAifIpmDaVSGds95yPT4exnXPV7nSn6OMA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-09-02T11:16:05Z"
  mac: ENC[AES256_GCM,data:qVS1pU6Gk6Kci1JMEgObmEAHw/jOl9/ay753rNncy41E6UQWxnQ/hJ6z+qzLJMBnOo5d8ItY3Zh8+C0HFpXurmKpl+bmRfi3cI4I6w04/qhtt5S5B6AGukWo58wCZZ3OTiA/hC4jKhPTTzUjyNNtEE6uV+/N4r4inLUzhIHWVO0=,iv:MS/W+HbTZdptfLAGzfw5Zl2GburNnDx2vHV4YeVC1ng=,tag:YMsf51ld2O+FOtDu1d1KcQ==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
sops:
  age:
    - recipient: age1086gtxn8l9dh0t2y0nu5ye0hczjyjc7q5tengjcf8lkynlta653sapg96f
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkYitCZWhvYmppV2UreUx0
[...]
        nzwiGQHxcROREf9lvCl1OAifIpmDaVSGds95yPT4exnXPV7nSn6OMA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-09-02T11:16:05Z"
  mac: ENC[AES256_GCM,data:qVS1pU6Gk6Kci1JMEgObmEAHw/jOl9/ay753rNncy41E6UQWxnQ/hJ6z+qzLJMBnOo5d8ItY3Zh8+C0HFpXurmKpl+bmRfi3cI4I6w04/qhtt5S5B6AGukWo58wCZZ3OTiA/hC4jKhPTTzUjyNNtEE6uV+/N4r4inLUzhIHWVO0=,iv:MS/W+HbTZdptfLAGzfw5Zl2GburNnDx2vHV4YeVC1ng=,tag:YMsf51ld2O+FOtDu1d1KcQ==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
sops:
  age:
    - recipient: age1086gtxn8l9dh0t2y0nu5ye0hczjyjc7q5tengjcf8lkynlta653sapg96f
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkYitCZWhvYmppV2UreUx0
[...]
        nzwiGQHxcROREf9lvCl1OAifIpmDaVSGds95yPT4exnXPV7nSn6OMA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-09-02T11:16:05Z"
  mac: ENC[AES256_GCM,data:qVS1pU6Gk6Kci1JMEgObmEAHw/jOl9/ay753rNncy41E6UQWxnQ/hJ6z+qzLJMBnOo5d8ItY3Zh8+C0HFpXurmKpl+bmRfi3cI4I6w04/qhtt5S5B6AGukWo58wCZZ3OTiA/hC4jKhPTTzUjyNNtEE6uV+/N4r4inLUzhIHWVO0=,iv:MS/W+HbTZdptfLAGzfw5Zl2GburNnDx2vHV4YeVC1ng=,tag:YMsf51ld2O+FOtDu1d1KcQ==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
